--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,9 +1,10 @@
 <html>
     <head>
         <title>
-            CMS TOOL
+            management tool
         </title>
         <link rel="stylesheet" href="public/style.css" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
     </head>
     <body>
         <div id="rootApp"></div>
